Fixed some bugs

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <title>ATM's Nearby</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="stylesheet" type="text/css" href="style.css">
+	<link rel="stylesheet" type="text/css" href="build/main.css">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 	<script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDPxHbcNLidfsgnlGuw43UAIC2ze0aVtJE&libraries=places&callback=initMap"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
@@ -32,8 +32,8 @@
          </table>
        </div>
      </div>
-     <script type="text/javascript" src="animate.js"></script>
-     <script type="text/javascript" src="location.js"></script>
-     <script type="text/javascript" src="multi.js"></script>
+     <script type="text/javascript" src="js/animate.js"></script>
+     <script type="text/javascript" src="js/location.js"></script>
+     <script type="text/javascript" src="js/multi.js"></script>
 </body>
 </html>
